# ascii-3d-surface-renderer

./: README.md  pyproject.toml  surface.py
docs/: ARCHITECTURE.md  OPERATION.md  surface-specification.md
shapes/: boy.yaml  cayley_cusp.yaml  dini.yaml  gyroid.yaml  horn.yaml  hyperbolic_paraboloid.yaml  klein.yaml  mobius.yaml  pinch_point.yaml  saddle.yaml  seashell.yaml  sphere.yaml  torus.yaml
